# esp32-hydracup

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  hydracup-integration-handoff.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: ci.yml
data/: calibration.html  history.html  index.html  login.html  settings.html  style.css  ui.js
docs/: api.md  architecture.md  data-formats.md  hardware.md  index.md  modules.md
docs/guides/: build-flash.md  calibration.md  configuration.md  discord-setup.md  getting-started.md
docs/releases/: v0.2.0.md  v0.3.0.md  v0.4.0.md
include/: app_types.h  config.h  hal_delay.h  hal_log.h  hal_time.h  http_server_support.h  hydracup_auth.h  pins.h  version.h
lib/AppState/: AppState.h
lib/BuzzerController/: BuzzerController.cpp  BuzzerController.h
lib/ConfigManager/: ConfigManager.cpp  ConfigManager.h
lib/ConfigPortal/: ConfigPortal.cpp  ConfigPortal.h
lib/DailySummaryManager/: DailySummaryManager.cpp  DailySummaryManager.h
lib/DashboardServer/: DashboardServer.cpp  DashboardServer.h
lib/DiscordNotifier/: DiscordNotifier.cpp  DiscordNotifier.h
lib/DisplayManager/: DisplayManager.cpp  DisplayManager.h
lib/DrinkDetector/: DrinkDetector.cpp  DrinkDetector.h
lib/DrinkDetectorCore/: DrinkDetectorCore.cpp  DrinkDetectorCore.h
lib/EventLogger/: EventLogger.cpp  EventLogger.h
lib/Hal/: Hal.cpp
lib/HttpAuth/: HttpAuth.cpp
release-assets/: hydracup-bottom.step  hydracup-bottom.stl  hydracup-top.step  hydracup-top.stl
src/: CMakeLists.txt  idf_component.yml  main.cpp
(+16 files in other folders)
